# cat-food-unsupervised-survey

./: AGENT.md  BU Data from Survey Cases_final(5).csv  Data_Preprocessing_Report.md  GEMINI.md  GOAL.md  Procfile  README.md  pyproject.toml  render.yaml  repo_bootstrap.py  wsgi.py
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
dashboard/: __init__.py  __main__.py  app.py  bootstrap.py  config.py  data_loader.py  supervised_callbacks.py  supervised_data_loader.py
docs/: supervised-team-handoff.md
outputs/: clean_dataset_with_segments.csv  correlation_matrix.csv  metrics_summary.json  segment_profiles.csv
presentation/: aie323-scope-slide.md  full-presentation-slides.html  full-presentation-slides.md  full-presentation-slides.txt  unsupervised-slides.md  unsupervised-slides.txt
reports/: descriptive_stats_th.md  unsupervised_owner_memo_th.md  unsupervised_report_th.md
scripts/: build_deployment_artifacts.py  predict_supervised_segment.py  run_pipeline.py  run_supervised_pipeline.py  run_unsupervised_pipeline.py
supervised/: __init__.py  config.py  data_loading.py  features.py  history_store.py  model_evaluation.py  models.py  pipeline.py  reporting.py  schema.py  scoring.py  train_classifier.py
supervised_team/: cleaned_survey_data.csv
tests/: conftest.py  test_data_loading.py  test_deployment_docs.py  test_features.py  test_models.py  test_pipeline.py  test_preprocessing.py  test_reporting.py  test_wsgi_entrypoint.py
unsupervised/: __init__.py  anomaly_detection.py  pca_clustering.py  preprocessing.py  reporting.py
(+140 files in other folders)
