[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "catfood-unsupervised"
version = "0.1.0"
description = "Unsupervised learning pipeline for the BU cat food survey."
requires-python = ">=3.10"
dependencies = [
    "dash>=2.14",
    "plotly>=5.18",
    "dash-bootstrap-components>=1.5",
    "gunicorn>=21.2",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
